--- a/html/landing_page.html
+++ b/html/landing_page.html
@@ -14,7 +14,7 @@
             <nav>
                 <img src="../files/codeSmashersLogo.jpg" alt="Failed to reload!!" class="logo">
                 <ul id="sidemenu">
-                    <li><a href="_">Login</a></li>
+                    <li><a href="../html/login_user.html">Login</a></li>
                     <li><a href="_">Sign in</a></li>
                 </ul>
             </nav>
