--- a/html/landing_page.html
+++ b/html/landing_page.html
@@ -25,7 +25,7 @@
     <div class="mainPart">
         
         <div class="mainText" id="heading"><p>
-            Reveal Your True Cyber Security Digital Footprint
+            Data is the pollution problem of the information Age, and protecting Privacy is the Environmental Challenge.
         </p>
     <button>Read More</button></div>
     </div>
