--- a/html/login_user.html
+++ b/html/login_user.html
@@ -14,7 +14,7 @@
                 <img src="../files/codeSmashersLogo.jpg" alt="Failed to reload!!" class="logo">
                 <ul id="sidemenu">
                     <li><a href="login_user.html" class="currentPage">Login</a></li>
-                    <li><a href="_">Sign in</a></li>
+                    <li><a href="_">Sign Up</a></li>
                 </ul>
             </nav>
         </div>
@@ -37,5 +37,11 @@
             
         </form>
     </div>
+    <!-- Footer -->
+    <footer>
+        <div class="footer">
+            CODESMASHERS &COPY; 2023 || MAKING PRIVACY BETTER
+        </div>
+    </footer>
 </body>
 </html>
